APIs/googleapis.com/jobs/v3/javascript-client/docs/SearchJobsRequest.md
# CloudTalentSolutionApi.SearchJobsRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**disableKeywordMatch** | **Boolean** | Optional. Controls whether to disable exact keyword match on Job.job_title, Job.description, Job.company_display_name, Job.locations, Job.qualifications. When disable keyword match is turned off, a keyword match returns jobs that do not match given category filters when there are matching keywords. For example, the query \&quot;program manager,\&quot; a result is returned even if the job posting has the title \&quot;software developer,\&quot; which does not fall into \&quot;program manager\&quot; ontology, but does have \&quot;program manager\&quot; appearing in its description. For queries like \&quot;cloud\&quot; that does not contain title or location specific ontology, jobs with \&quot;cloud\&quot; keyword matches are returned regardless of this flag&#39;s value. Please use Company.keyword_searchable_custom_fields or Company.keyword_searchable_custom_attributes if company specific globally matched custom field/attribute string values is needed. Enabling keyword match improves recall of subsequent search requests. Defaults to false. | [optional] 
**diversificationLevel** | **String** | Optional. Controls whether highly similar jobs are returned next to each other in the search results. Jobs are identified as highly similar based on their titles, job categories, and locations. Highly similar results are clustered so that only one representative job of the cluster is displayed to the job seeker higher up in the results, with the other jobs being displayed lower down in the results. Defaults to DiversificationLevel.SIMPLE if no value is specified. | [optional] 
**enableBroadening** | **Boolean** | Optional. Controls whether to broaden the search when it produces sparse results. Broadened queries append results to the end of the matching results list. Defaults to false. | [optional] 
**histogramFacets** | [**HistogramFacets**](HistogramFacets.md) |  | [optional] 
**jobQuery** | [**JobQuery**](JobQuery.md) |  | [optional] 
**jobView** | **String** | Optional. The desired job attributes returned for jobs in the search response. Defaults to JobView.SMALL if no value is specified. | [optional] 
**offset** | **Number** | Optional. An integer that specifies the current offset (that is, starting result location, amongst the jobs deemed by the API as relevant) in search results. This field is only considered if page_token is unset. The maximum allowed value is 5000. Otherwise an error is thrown. For example, 0 means to return results starting from the first matching job, and 10 means to return from the 11th job. This can be used for pagination, (for example, pageSize &#x3D; 10 and offset &#x3D; 10 means to return from the second page). | [optional] 
**orderBy** | **String** | Optional. The criteria determining how search results are sorted. Default is \&quot;relevance desc\&quot;. Supported options are: * &#x60;\&quot;relevance desc\&quot;&#x60;: By relevance descending, as determined by the API algorithms. Relevance thresholding of query results is only available with this ordering. * &#x60;\&quot;posting_publish_time desc\&quot;&#x60;: By Job.posting_publish_time descending. * &#x60;\&quot;posting_update_time desc\&quot;&#x60;: By Job.posting_update_time descending. * &#x60;\&quot;title\&quot;&#x60;: By Job.title ascending. * &#x60;\&quot;title desc\&quot;&#x60;: By Job.title descending. * &#x60;\&quot;annualized_base_compensation\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_base_compensation_range ascending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_base_compensation desc\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_base_compensation_range descending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_total_compensation\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_total_compensation_range ascending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_total_compensation desc\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_total_compensation_range descending. Jobs whose annualized base compensation is unspecified are put at the end of search results. | [optional] 
**pageSize** | **Number** | Optional. A limit on the number of jobs returned in the search results. Increasing this value above the default value of 10 can increase search response time. The value can be between 1 and 100. | [optional] 
**pageToken** | **String** | Optional. The token specifying the current offset within search results. See SearchJobsResponse.next_page_token for an explanation of how to obtain the next set of query results. | [optional] 
**requestMetadata** | [**RequestMetadata**](RequestMetadata.md) |  | [optional] 
**requirePreciseResultSize** | **Boolean** | This field is deprecated. | [optional] 
**searchMode** | **String** | Optional. Mode of a search. Defaults to SearchMode.JOB_SEARCH. | [optional] 



## Enum: DiversificationLevelEnum


* `DIVERSIFICATION_LEVEL_UNSPECIFIED` (value: `"DIVERSIFICATION_LEVEL_UNSPECIFIED"`)

* `DISABLED` (value: `"DISABLED"`)

* `SIMPLE` (value: `"SIMPLE"`)





## Enum: JobViewEnum


* `UNSPECIFIED` (value: `"JOB_VIEW_UNSPECIFIED"`)

* `ID_ONLY` (value: `"JOB_VIEW_ID_ONLY"`)

* `MINIMAL` (value: `"JOB_VIEW_MINIMAL"`)

* `SMALL` (value: `"JOB_VIEW_SMALL"`)

* `FULL` (value: `"JOB_VIEW_FULL"`)





## Enum: SearchModeEnum


* `SEARCH_MODE_UNSPECIFIED` (value: `"SEARCH_MODE_UNSPECIFIED"`)

* `JOB_SEARCH` (value: `"JOB_SEARCH"`)

* `FEATURED_JOB_SEARCH` (value: `"FEATURED_JOB_SEARCH"`)




